<resources>
    <string name="app_name">What\'s My Allergy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_calendar">Calendar</string>
    <!--<string name="title_activity_calendar_page">calendar_page</string>-->
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar_page">CalendarPage</string>
    <string name="forecast_5day">5-Day Pollen Forecast</string>
    <string name="sample_location">Irvine, CA</string>
    <string name="sample_pollen_count">58</string>
    <string name="sample_category">Trees</string>
    <string name="sample_day">Today</string>
    <string name="high_severity_text">HIGH</string>
    <string name="moderate_severity_text">MODERATE</string>
    <string name="low_severity_text">LOW</string>
    <string name="today_text">Today\'s Pollen Count</string>
    <string name="pollen_img_description">desc</string>
    <string name="suggestion_text">Suggestions</string>
    <string name="button_text">Enter Today\'s Symptoms</string>
    <string name="large_text">\"Material is the metaphor.\\n\\n\"          \"A material metaphor is the unifying theory of a rationalized space and a system of motion.\"         \"The material is grounded in tactile reality, inspired by the study of paper and ink, yet \"         \"technologically advanced and open to imagination and magic.\\n\"         \"Surfaces and edges of the material provide visual cues that are grounded in reality. The \"         \"use of familiar tactile attributes helps users quickly understand affordances. Yet the \"         \"flexibility of the material creates new affordances that supercede those in the physical \"         \"world, without breaking the rules of physics.\\n\"         \"The fundamentals of light, surface, and movement are key to conveying how objects move, \"         \"interact, and exist in space and in relation to each other. Realistic lighting shows \"         \"seams, divides space, and indicates moving parts.\\n\\n\"          \"Bold, graphic, intentional.\\n\\n\"</string>
    <string name="accu_apikey">HMoCMG0Z9rnwGcuwnVzfOVTbhK77TexE</string>
    <string name="accu_citySearchApiURL">http://dataservice.accuweather.com/locations/v1/cities/search</string>
    <string name="accu_5dayApiURL">http://dataservice.accuweather.com/forecasts/v1/daily/5day/</string>
    <string name="accu_postalCodeApiURL">http://dataservice.accuweather.com/locations/v1/postalcodes/search</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="title_activity_map_page">MapPage</string>
    <string name="title_activity_settings_page">SettingsPage</string>
    <string name="title_activity_settings_page_title">Settings</string>
    <string name="title_activity_settings_page_name">Name</string>
    <string name="title_activity_settings_page_name_value">Ramesh Jain</string>
    <string name="title_activity_settings_page_age">Age</string>
    <string name="title_activity_settings_page_age_value">52</string>
    <string name="title_activity_settings_page_location">Location</string>
    <string name="title_activity_settings_page_enable">Enable</string>
    <string name="title_activity_settings_page_disable">Disable</string>
    <string name="title_activity_settings_page_notifications">Notifications</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


</resources>
