<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
<<<<<<< HEAD
        android:title="@string/title_activity_calendar" />
=======
        android:title="@string/title_profile" />
>>>>>>> 414ca54e6642f3e86c67905a1ed2ec2ebb4bde7c

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_settings" />

</menu>
